fix for tablet defects, 1: cta not showingup properly + footer overlapping with social icons

--- a/node-app/src/views/core/components/content/container/style.scss
+++ b/node-app/src/views/core/components/content/container/style.scss
@@ -464,6 +464,14 @@ ul {
         }
     }
 }    
+//this is for dual and triple cta's not appearing in the same row on Ipad
+@media (min-width: $tab-screen-min) and (max-width:$tab-screen-max) {
+    .layout-container{
+        .row.flex-height{
+            display: -webkit-box;
+        }
+    }
+}
 .company-highlight-blue-grey-background {
     background: linear-gradient(to bottom, $medium-blue-color, $medium-blue-color 50%, $light-grey-20 50% );
 }
